--- a/template.yaml
+++ b/template.yaml
@@ -15,30 +15,10 @@ Parameters:
     Type: String
     Description: The EC2 instance type
     Default: t2.micro
-    CPUPolicyTargetValue:
-      Type: String
-      Description: The target utilization for the CPU metric
-      Default: '50'
-  KeyName:
-    Description: Name of an existing EC2 key pair to allow SSH access to the instances
-    Type: 'AWS::EC2::KeyPair::KeyName'
-  LatestAmiId:
-    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
-    Description: The latest Amazon Linux 2 AMI from the Parameter Store
-    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
-  SSHLocation:
-    Description: The IP address range that can be used to SSH to the EC2 instances
+  CPUPolicyTargetValue:
     Type: String
-    MinLength: 9
-    MaxLength: 18
-    Default: 0.0.0.0/0
-    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
-  Subnets:
-    Type: 'List<AWS::EC2::Subnet::Id>'
-    Description: At least two public subnets in different Availability Zones in the selected VPC
-  VPC:
-    Type: 'AWS::EC2::VPC::Id'
-    Description: A virtual private cloud (VPC) that enables resources in public subnets to connect to the internet
+    Description: The target utilization for the CPU metric
+    Default: '50'
   ImageID:
     Type: String
     Default: "ami-02b7d5b1e55a7b5f1"
@@ -47,7 +27,7 @@ Parameters:
     Default: auto-scaling-lab
 
 Resources:
-  ASGLabVpc:
+  ASGLabVPC:
     Type: AWS::EC2::VPC
     Properties:
       CidrBlock: "10.0.0.0/16"
@@ -55,26 +35,55 @@ Resources:
       EnableDnsHostnames: true
       Tags:
         - Key: Name
-          Value: ASGLabVpc
+          Value: ASGLabVPC
         - Key: Project
           Value: !Sub "${ProjectTag}"
 
-  PrivateSubnet:
+  PrivateSubnet1:
     Type: AWS::EC2::Subnet
     Properties:
-      VpcId: !Ref ASGLabVpc
-      CidrBlock: 10.0.0.0/24
-      CidrBlock: ""
-      AvailabilityZone: !Select [0, !GetAZs  ""]
-   
-  PublicSubnet:
-    Type: AWS::EC2::Subnet
-    Properties:
-      VpcId: !Ref ASGLabVpc
+      VpcId: !Ref ASGLabVPC
       CidrBlock: 10.0.1.0/24
       AvailabilityZone: !Select [0, !GetAZs  ""]
+  
+  PrivateSubnet2:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref ASGLabVPC
+      CidrBlock: 10.0.2.0/24
+      AvailabilityZone: !Select [1, !GetAZs  ""]
+   
+  PublicSubnet1:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref ASGLabVPC
+      CidrBlock: 10.0.3.0/24
+      MapPublicIpOnLaunch: true
+      AvailabilityZone: !Select [0, !GetAZs  ""]
+  
+  PublicSubnet2:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref ASGLabVPC
+      CidrBlock: 10.0.4.0/24
+      MapPublicIpOnLaunch: true
+      AvailabilityZone: !Select [1, !GetAZs  ""]
 
-    # NAT Gateway
+  # Internet Gateway
+  InternetGateway:
+    Type: AWS::EC2::InternetGateway
+    Properties:
+      Tags:
+        - Key: Name
+          Value: AutoScalingLabIGW
+  
+  VPCGatewayAttachment:
+    Type: AWS::EC2::VPCGatewayAttachment
+    Properties:
+      VpcId: !Ref ASGLabVPC
+      InternetGatewayId: !Ref InternetGateway
+
+  # NAT Gateway
   NatGatewayEIP:
     Type: AWS::EC2::EIP
     Properties:
@@ -91,135 +100,103 @@ Resources:
         - Key: Project
           Value: !Sub "${ProjectTag}"
 
-    PrivateRoute:
-    Type: AWS::EC2::Route
-    Properties:
-      RouteTableId: !Ref PrivateRouteTable
-      DestinationCidrBlock: 0.0.0.0/0
-      NatGatewayId: !Ref NatGateway
-
-    WebServerSecurityGroup:
-        Type: AWS::EC2::SecurityGroup
-        Properties:
-            GroupDescription: Security group for web server
-            VpcId: !Ref MyVPC
-            SecurityGroupIngress:
-              - IpProtocol: tcp
-                FromPort: 80
-                ToPort: 80
-                CidrIp: 0.0.0.0/0
-              - IpProtocol: tcp
-                FromPort: 22
-                ToPort: 22
-                CidrIp: 0.0.0.0/0
-          
-    MyIamInstanceProfile:
-      Type: AWS::IAM::InstanceProfile
+    PublicRouteTable:
+      Type: AWS::EC2::RouteTable
       Properties:
-        InstanceProfileName: MyIamInstanceProfile
-        Path: "/"
-        Roles:
-          - MyAdminRole
-      
-    SSMRole:
-      Type: AWS::IAM::Role
-      Properties:
-        AssumeRolePolicyDocument:
-          Version: '2012-10-17'
-          Statement:
-            - Effect: Allow
-              Principal:
-                Service: ec2.amazonaws.com
-              Action: sts:AssumeRole
-        ManagedPolicyArns:
-          - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
+        VpcId: !Ref ASGLabVPC
         Tags:
           - Key: Name
-            Value: SSMRole
+            Value: PublicRouteTable
 
-    MyLaunchTemplate:
-        Type: AWS::EC2::LaunchTemplate
-        Properties:
-            LaunchTemplateData:
-                IamInstanceProfile:
-                    Arn: !GetAtt
-                        - MyIamInstanceProfile
-                        - Arn
-                DisableApiTermination: true
-                ImageId: "ami-02b7d5b1e55a7b5f1"
-                InstanceType: t2.micro
-                KeyName: MyKeyPair
-                SecurityGroupIds:
-                    - 
-            LaunchTemplateName: "dals"
+    PublicRoute:
+      Type: AWS::EC2::Route
+      Properties:
+      RouteTableId: !Ref PublicRouteTable
+      DestinationCidrBlock: 0.0.0.0/0
+      GatewayId: !Ref InternetGateway
 
+    PublicSubnet1RouteTableAssociation:
+      Type: AWS::EC2::SubnetRouteTableAssociation
+      Properties:
+        SubnetId: !Ref PublicSubnet1
+        RouteTableId: !Ref PublicRouteTable
 
+    PublicSubnet2RouteTableAssociation:
+      Type: AWS::EC2::SubnetRouteTableAssociation
+      Properties:
+        SubnetId: !Ref PublicSubnet2
+        RouteTableId: !Ref PublicRouteTable
 
+    PrivateRoute:
+      Type: AWS::EC2::Route
+      Properties:
+        RouteTableId: !Ref PrivateRouteTable
+        DestinationCidrBlock: 0.0.0.0/0
+        NatGatewayId: !Ref NatGateway
+
+    WebServerSecurityGroup:
+      Type: AWS::EC2::SecurityGroup
+      Properties:
+        GroupDescription: Security group for web server
+        VpcId: !Ref MyVPC
+        SecurityGroupIngress:
+          - IpProtocol: tcp
+            FromPort: 80
+            ToPort: 80
+            CidrIp: 0.0.0.0/0
+        Tags:
+          - Key: Name
+            Value: WebServerSecurityGroup
 
     ELBSecurityGroup:
       Type: AWS::EC2::SecurityGroup
       Properties:
         GroupDescription: ELB Security Group
-        VpcId: !Ref ASGLabVpc
+        VpcId: !Ref ASGLabVPC
         SecurityGroupIngress:
-        - IpProtocol: tcp
-          FromPort: 80
-          ToPort: 80
-          CidrIp: 0.0.0.0/0
+          - IpProtocol: tcp
+            FromPort: 80
+            ToPort: 80
+            CidrIp: 0.0.0.0/0
+        Tags:
+          - Key: Name
+            Value: ELBSecurityGroup
 
-    EC2SecurityGroup:
-      Type: AWS::EC2::SecurityGroup
+    AutoScalingLabTargetGroup:
+      Type: AWS::ElasticLoadBalancingV2::TargetGroup
       Properties:
-        GroupDescription: EC2 Security Group: Allow SSH and HTTP requests
-        VpcId: !Ref ASGLabVpc
-        SecurityGroupIngress:
-        - IpProtocol: tcp
-          FromPort: 80
-          ToPort: 80
-          SourceSecurityGroupId:
-            Fn::GetAtt:
-                - ELBSecurityGroup
-                - GroupId
-        - IpProtocol: tcp
-          FromPort: 22
-          ToPort: 22
-          CidrIp: !Ref SSHLocation
+        Name: AutoScalingLabTargetGroup
+        VpcId: !Ref ASGLabVPC
+        Port: 80
+        Protocol: HTTP
+        HealthCheckProtocol: HTTP
+        HealthCheckPath: /
+        HealthCheckIntervalSeconds: 30
+        HealthCheckTimeoutSeconds: 5
+        HealthyThresholdCount: 2
+        UnhealthyThresholdCount: 2          
+        Tags:
+          - Key: Name
+            Value: AutoScalingLabTargetGroup
 
-    EC2TargetGroup:
-        Type: AWS::ElasticLoadBalancingV2::TargetGroup
-        Properties:
-            Name: EC2TargetGroup
-            HealthCheckIntervalSeconds: 30
-            HealthCheckProtocol: HTTP
-            HealthCheckTimeoutSeconds: 15
-            HealthyThresholdCount: 5
-            Matcher:
-            HttpCode: '200'
-            Port: 80
-            Protocol: HTTP
-            TargetGroupAttributes:
-                - Key: deregistration_delay.timeout_seconds
-            Value: '20'
-            UnhealthyThresholdCount: 3
-            VpcId: !Ref ASGLabVpc
+    ELBListener:
+      Type: AWS::ElasticLoadBalancingV2::Listener
+      Properties:
+        LoadBalancerArn: !Ref ApplicationLoadBalancer
+        DefaultActions:
+          - Type: forward
+            TargetGroupArn: !Ref AutoScalingLabTargetGroup
 
-    ALBListener:
-        Type: AWS::ElasticLoadBalancingV2::Listener
-        Properties:
-            DefaultActions:
-                - Type: forward
-                    TargetGroupArn: !Ref EC2TargetGroup
-            LoadBalancerArn: !Ref ApplicationLoadBalancer
-            Port: 80
-            Protocol: HTTP
-
+    # Application Load Balancer
     ApplicationLoadBalancer:
       Type: AWS::ElasticLoadBalancingV2::LoadBalancer
       Properties:
         Scheme: internet-facing
-        Subnets: !Ref PublicSubnet
+        Subnets: 
+          - !Ref PublicSubnet1
+          - !Ref PublicSubnet2
         SecurityGroups:
-          - !GetAtt ELBSecurityGroup.GroupId
+          - !Ref ELBSecurityGroup
 
     # --- EC2 Launch Template
     LaunchTemplate:
@@ -227,7 +204,7 @@ Resources:
       Properties: 
         LaunchTemplateName: !Sub ${AWS::StackName}-launch-template
         LaunchTemplateData:
-          ImageId: !Ref ImageID
+          ImageId: "ami-02b7d5b1e55a7b5f1"
           InstanceType: !Ref InstanceType
           KeyName: !Ref KeyName
           SecurityGroupIds: 
@@ -236,25 +213,61 @@ Resources:
             Fn::Base64: !Sub |
               #!/bin/bash
               yum update -y
-              yum install -y apache2
+              yum install -y httpd stress
               INSTANCE_ID=$(curl -s http://169.254.169.254/latest/meta-data/instance-id)
-              HTML_CONTENT="<h1>Hello from $(hostname -l | cut -d" " -f1) / ${INSTANCE_ID}</h1> \
+              IP_ADDRESS="$(hostname -l | cut -d" " -f1)"
+
+              HTML_CONTENT="<h1>Hello from $IP_ADDRESS / ${INSTANCE_ID}</h1> \
               <button>Stress</button"
               echo "$HTML_CONTENT" > /var/www/html/index.html
-              systemctl restart apache2
+              cat > /var/www/html/index.html <<EOF
+              <!DOCTYPE html>
+            <html>
+            <head>
+              <title>Auto Scaling Lab</title>
+            </head>
+            <body>
+              <h1>Hello from $IP_ADDRESS / $INSTANCE_ID</h1>
+              <button onclick="stressCPU()">Stress CPU</button>
+              <script>
+                function stressCPU() {
+                  fetch('/stress', { method: 'POST' })
+                    .then(response => response.text())
+                    .then(data => alert(data))
+                    .catch(error => console.error('Error:', error));
+                }
+              </script>
+            </body>
+            </html>
+            EOF
+            cat > /var/www/html/stress.sh <<EOF
+            #!/bin/bash
+            stress --cpu 1 --timeout 60
+            echo "CPU stress test completed"
+            EOF
+            chmod +x /var/www/html/stress.sh
+            cat > /etc/httpd/conf.d/stress.conf <<EOF
+            <VirtualHost *:80>
+                DocumentRoot /var/www/html
+                <Location /stress>
+                    ProxyPass "unix:/tmp/stress.sock|fcgi://localhost/var/www/html/stress.sh"
+                </Location>
+            </VirtualHost>
+            EOF
+            systemctl restart httpd
     
     AutoScalingPolicy:
       Type: AWS::ApplicationAutoScaling::ScalingPolicy
       Properties:
         PolicyName: WebServerScalingPolicy
         PolicyType: TargetTrackingScaling
-        ScalingTargetId: !Ref WebServerASG
+        ScalingTargetId: !Ref AutoScalingGroup
         TargetTrackingConfiguration:
           TargetValue: !Ref CPUPolicyTargetValue
           PredefinedMetricSpecification:
             PredefinedMetricType: ASGAverageCPUUtilization
       
-    WebServerASG:
+    AutoScalingGroup:
       Type: AWS::AutoScaling::AutoScalingGroup
       Properties:
         LaunchTemplate:
@@ -262,21 +275,20 @@ Resources:
           Version: !GetAtt LaunchTemplate.LatestVersionNumber
         MaxSize: '3'
         MinSize: '1'
+        DesiredCapacity: '1'
         TargetGroupARNs:
-          - !Ref EC2TargetGroup
+          - !Ref AutoScalingLabTargetGroup
+        HealthCheckType: ELB
+        HealthCheckGracePeriod: 300
         VPCZoneIdentifier: 
-          - !Ref PrivateSubnet
+          - !Ref PrivateSubnet1
+          - !Ref PrivateSubnet2
+        Tags:
+          - Key: Name
+            Value: AutoScalingLabInstance
+            PropagateAtLaunch: true
 
 Outputs:
-  WebServerASG:
-    Description: Auto Scaling Group for the EC2 instance
-    Value: !Ref WebServerASG
-  VPCId:
-    Description: Id of the VPC 
-    Value: !Ref ASGLabVpc
-  ApplicationLoadBalancerDNSName:
-    Description: DNS name of the Application Load Balancer
-    Value: !GetAtt ApplicationLoadBalancer.DNSName
-  WebServerPublicIP:  
-    Description: Public IP of the web server
-    Value: !GetAtt WebServerInstance.PublicIp
+  ALBEndpoint:
+    Description: URL of the Application Load Balancer
+    Value: !Sub http://${ApplicationLoadBalancer.DNSName}
