--- a/template.yaml
+++ b/template.yaml
@@ -244,6 +244,11 @@ Resources:
         KeyName: EC2KeyPair
         SecurityGroupIds: 
           - !Ref WebServerSecurityGroup
+        TagSpecifications:
+          - ResourceType: "launch-template"
+            Tags:
+            - Key: "Project"
+              Value: !Sub "${ProjectTag}"
         UserData:
           Fn::Base64: !Sub |
             #!/bin/bash
