--- a/template.yaml
+++ b/template.yaml
@@ -169,6 +169,11 @@ Resources:
           FromPort: 80
           ToPort: 80
           CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
+          CidrIp: 0.0.0.0/0
+        
       Tags:
         - Key: Name
           Value: WebServerSecurityGroup
