--- a/template.yaml
+++ b/template.yaml
@@ -254,7 +254,7 @@ Resources:
           Fn::Base64: !Sub |
             #!/bin/bash
             yum update -y
-            yum install -y httpd stress
+            yum install -y httpd stress mod_proxy_fcgi
             systemctl start httpd
             systemctl enable httpd
             INSTANCE_ID=$(curl -s http://169.254.169.254/latest/meta-data/instance-id)
