--- a/template.yaml
+++ b/template.yaml
@@ -339,7 +339,7 @@ Resources:
                 <button onclick="stressCPU()">Stress CPU</button>
                 <script>
                   function stressCPU() {
-                    fetch('/stress', { method: 'POST' })
+                    fetch('/simulate-cpu-stress', { method: 'POST' })
                       .then(response => response.text())
                       .then(data => alert(data))
                       .catch(error => console.error('Error:', error));
