feat: add CGI configuration for Apache and CPU stress simulation script

--- a/template.yaml
+++ b/template.yaml
@@ -324,6 +324,19 @@ Resources:
             yum install -y httpd stress
             systemctl start httpd
             systemctl enable httpd
+
+            # Enable CGI module and configure Apache
+            cat <<EOF > /etc/httpd/conf.d/cgi-bin.conf
+            <Directory "/var/www/cgi-bin">
+                AllowOverride None
+                Options +ExecCGI
+                AddHandler cgi-script .cgi
+                Require all granted
+            </Directory>
+            EOF
+
+            # Restart Apache to apply CGI config
+            systemctl restart httpd
             
             INSTANCE_ID=$(curl -s http://169.254.169.254/latest/meta-data/instance-id)
             IP_ADDRESS="$(hostname -I | cut -d" " -f1)"
@@ -339,7 +352,7 @@ Resources:
                 <button onclick="stressCPU()">Stress CPU</button>
                 <script>
                   function stressCPU() {
-                    fetch('/simulate-cpu-stress', { method: 'POST' })
+                    fetch('/cgi-bin/simulate-cpu-stress.cgi', { method: 'POST' })
                       .then(response => response.text())
                       .then(data => alert(data))
                       .catch(error => console.error('Error:', error));
@@ -349,8 +362,8 @@ Resources:
             </html>
             EOF
 
-            # Endpoint for CPU stress
-            cat <<EOF > /var/www/html/simulate-cpu-stress
+            # Create CPU stress CGI script
+            cat <<EOF > /var/www/cgi-bin/simulate-cpu-stress.cgi
             #!/bin/bash
             echo "Content-type: text/html"
             echo ""
@@ -359,8 +372,7 @@ Resources:
             echo "</body></html>"
             nohup stress --cpu 2 --timeout 60 >/dev/null 2>&1 &
             EOF
-            chmod +x /var/www/html/simulate-cpu-stress
-            ln -s /var/www/html/simulate-cpu-stress /var/www/cgi-bin/simulate-cpu-stress
+
   AutoScalingPolicy:
     Type: AWS::AutoScaling::ScalingPolicy
     Properties:
